[metadata]
name = tor_relay_scanner
version = 0.0.7
author = ValdikSS
author_email = iam@valdikss.org.ru
description = Tor Relay availability checker, for using it as a bridge in countries with censorship
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ValdikSS/tor-relay-scanner
project_urls =
    Bug Tracker = https://github.com/ValdikSS/tor-relay-scanner/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
            =src
packages = find:
python_requires = >=3.7
#install_requires = requests[socks]
install_requires = 
    requests[socks] @ https://github.com/psf/requests/archive/8c86fb111b955ea76439199821973c40a70a19a2.zip

[options.packages.find]
where = src
